--- a/style.css
+++ b/style.css
@@ -69,3 +69,53 @@
   line-height: 25px;
   margin-bottom: 30px;
 }
+
+/* recipies style */
+.Recipies-area{
+  padding: 5%;
+  background-color: #a09999;
+}
+.title{
+  text-align: center;
+}
+.title h1{
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+.title p{
+  width: 55%;
+  line-height: 25px;
+  
+  margin: auto;
+  
+}
+.single-rec{
+  display: flex;
+  margin-top: 30px;
+  
+
+}
+.rec-one,.rec-two{
+  width: 50%;
+  border-radius: 30px;
+  
+  padding: 30px;
+  background-color: #fff;
+}
+.rec-one{
+  margin-right: 30px;
+}
+
+.rec-img{}
+.rec-img img{
+  width: 100%;
+  border-radius: 30px;
+}
+.rec-text h1{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 40px;
+}
+.rec-text p{
+  font-size: 20px;
+}
